apps/kratos/components/tailscale/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kratos
  namespace: shikanime
  annotations:
    tailscale.com/proxy-class: nishir-kratos
    tailscale.com/tags: tag:web
spec:
  ingressClassName: tailscale
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kratos-admin
  namespace: shikanime
  annotations:
    tailscale.com/proxy-class: nishir-kratos-admin
    tailscale.com/tags: tag:web
spec:
  ingressClassName: tailscale
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kratos-selftservice
  namespace: shikanime
  annotations:
    tailscale.com/proxy-class: nishir-kratos-selftservice
    tailscale.com/tags: tag:web
spec:
  ingressClassName: tailscale
